# adhoc

./: README.md
beamer/: .editorconfig  CMakeLists.txt  beamer.c
binscout/: CMakeLists.txt  README.md  binscout.1  binscout.1.md  binscout.c  bytevec.c  bytevec.h  hex.c  hex.h  mem.c  mem.h
gdb/: README.md
ocaml/psafe3info/: README.md  dune  psafe3info.ml
pwtable/: Makefile  README.md  pwtable.c
